updated by ahmed

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <div class="footer_content">
         <h2>FutureTech</h2>
         <p>All rights are reserved at
-            <a href="https://ahmedalee014.github.io/" class="copy"> FutureTech</a>
+            <a href="https://github.com/ahmedalee014" class="copy">FutureTech!</a>
         </p>
     </div>
 </body>
